--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -1,1 +1,8 @@
-
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body class="vsc-initialized">{% extends "base.html" %}
+    {% block content %}
+    <div class="jumbotron">
+        <h1>Welkom bij IT Academy Noord-Nederland!</h1>
+        <p>Om te beginnen, selecteer een item uit de navigatiebalk.</p>
+    </div>
+    {% endblock %}
+    </body></html>
