--- a/project/templates/cursus.html
+++ b/project/templates/cursus.html
@@ -1,3 +1,12 @@
 <html>
+    <html>
+        <head>
+            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        </head>
     
+        <body class="vsc-initialized">{% extends "base.html" %} 
+            {% block content %}
+            <h1>Cursuspagina</h1>
+            {% endblock %}
+        </body>   
 </html>
