--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -3,7 +3,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
 
-    <body class="vsc-initialized">{% extends "base.html" %}
+    <body class="vsc-initialized">
+    {% extends "base.html" %}
     {% block content %}
     <div class="jumbotron">
         <h1>Welkom bij IT Academy Noord-Nederland!</h1>
