--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -22,6 +22,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
+            <a class="nav-item nav-link" href="{{ url_for('standaard.cursus') }}">Cursussen</a>               
+            <a class="nav-item nav-link" href="{{ url_for('studenten.rooster') }}">Rooster</a>            
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>            
