--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -3,5 +3,14 @@
 {% block content %}
 
     <h1> Register </h1>
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        {{ form.email.label }} {{ form.email() }}<br>
+        {{ form.username.label }} {{ form.username() }}<br>
+        {{ form.password.label }} {{ form.password() }}<br>
+        {{ form.pass_confirm.label }} {{ form.pass_confirm() }}<br>
+        {{ form.submit() }}
+    </form>
+    
 
 {% endblock %}
