--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{{ url_for('index') }}">
         <img src="/static/logo-klein.png" width="40%" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,8 +23,8 @@
         <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
             <a class="nav-item nav-link" href="{{ url_for('standaard.cursus') }}">Cursussen</a>                          
-            <a class="nav-item nav-link" href="{{ url_for('standaard.login') }}">Login</a>
-            <a class="nav-item nav-link" href="{{ url_for('standaard.register') }}">Register</a>      
+            <a class="nav-item nav-link" href="{{ url_for('standaard.login') }}">Inloggen</a>
+            <a class="nav-item nav-link" href="{{ url_for('standaard.register') }}">Registreren</a>   
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>            
