--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -22,9 +22,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
-            <a class="nav-item nav-link" href="{{ url_for('standaard.cursus') }}">Cursussen</a>                          
+            <a class="nav-item nav-link" href="{{ url_for('standaard.cursus') }}">Cursussen</a>
+            {% if current_user.is_authenticated %}                          
+            <a class="nav-item nav-link" href="{{ url_for('standaard.logout') }}">Uitloggen</a>
+            {% else %}
             <a class="nav-item nav-link" href="{{ url_for('standaard.login') }}">Inloggen</a>
-            <a class="nav-item nav-link" href="{{ url_for('standaard.register') }}">Registreren</a>   
+            <a class="nav-item nav-link" href="{{ url_for('standaard.register') }}">Registreren</a>
+            {% endif %}
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>            
@@ -32,6 +36,20 @@
         </div>
     </div>
 </nav>
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="col col-sm-12">
+        {% for message in messages %}
+        <div class="alert alert-primary alert-dismissible fade show" role="alert" style="margin: 1rem 0.1rem !important;"> <!--inline style moet verplaats worden naar een stylesheet-->
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+{% endwith %}
 
 {% block content %}
 
