--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -27,7 +27,7 @@
 </form>
 </div>
 <div class="col-12">
-    <a href="{{ url_for('standaard.register') }}" class="btn btn-dark">Register</a>
+    <a href="{{ url_for('standaard.register') }}" class="btn btn-dark">Registeren</a>
 </div>
 
 {% endblock %}
