--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -2,15 +2,42 @@
 
 {% block content %}
 
-    <h1> Register </h1>
+<h1> Registreren </h1>
+    
+<div class="col-12">
     <form method="POST">
         {{ form.hidden_tag() }}
-        {{ form.email.label }} {{ form.email() }}<br>
-        {{ form.username.label }} {{ form.username() }}<br>
-        {{ form.password.label }} {{ form.password() }}<br>
-        {{ form.pass_confirm.label }} {{ form.pass_confirm() }}<br>
-        {{ form.submit() }}
+        <div class="form-group row">
+            {{ form.email.label(class="col-sm-2 col-form-label") }} 
+            <div class="col-sm-4">
+                {{ form.email(class="form-control") }}
+            </div>
+        </div>
+        <div class="form-group row">
+            {{ form.username.label(class="col-sm-2 col-form-label") }} 
+            <div class="col-sm-4">
+                {{ form.username(class="form-control") }}
+            </div>
+        </div>        
+        <div class="form-group row">
+            {{ form.password.label(class="col-sm-2 col-form-label") }} 
+            <div class="col-sm-4">
+                {{ form.password(class="form-control") }}
+            </div>
+        </div>
+        <div class="form-group row">
+            {{ form.pass_confirm.label(class="col-sm-2 col-form-label") }} 
+            <div class="col-sm-4">
+                {{ form.pass_confirm(class="form-control") }}
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-2">
+                {{ form.submit(class="btn btn-dark") }}
+            </div>
+        </div>
     </form>
-    
+    </div>
+
 
 {% endblock %}
