--- a/project/templates/cursus.html
+++ b/project/templates/cursus.html
@@ -1,33 +1,36 @@
-<html>
-    <html>
-        <head>
-            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        </head>
-    
-        <body class="vsc-initialized">{% extends "base.html" %} 
-            {% block content %}
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Taal</th>
-                        <th scope="col">Docent</th>
-                        <th scope="col">Datum</th>
-                        <th scope="col">Locatie</th>
-                        <th scope="col"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for lecture in lectures %}
-                    <tr>
-                        <td>{{ lecture.language }}</td>
-                        <td>{{ lecture.username }}</td>
-                        <td>{{ lecture.start_time }}</td>
-                        <td>{{ lecture.location }}</td>
-                        <td><a href='#' class="btn btn-dark">Aanmelden</a></td> <!---moet nog een dynamische link aanmaken--->
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            {% endblock %}
-        </body>   
-</html>
+{% extends "base.html" %} 
+
+{% block header %}
+  <h1>{% block title %}Cursussen{% endblock %}</h1>
+{% endblock %}
+
+{% block content %}
+
+<div class="container-fluid">
+    <h1 class = "blueheader">Cursussen</h1>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Taal</th>
+                <th scope="col">Docent</th>
+                <th scope="col">Datum</th>
+                <th scope="col">Locatie</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for lecture in lectures %}
+            <tr>
+                <td>{{ lecture.language }}</td>
+                <td>{{ lecture.username }}</td>
+                <td>{{ lecture.start_time }}</td>
+                <td>{{ lecture.location }}</td>
+                <td><a href='#' class="btn btn-dark">Aanmelden</a></td> <!---moet nog een dynamische link aanmaken--->
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endblock %}
+
