--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -1,33 +1,40 @@
 {% extends "base.html" %}
 
+{% block header %}
+  <h1>{% block title %}Login{% endblock %}</h1>
+{% endblock %}
+
 {% block content %}
+<div class="container-fluid"></div>
 
-<h1> Login </h1>
+    <h1 class = "blueheader"> Login </h1>
 
-<div class="col-12">
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <div class="form-group row">
-        {{ form.email.label(class="col-sm-2 col-form-label") }} 
-        <div class="col-sm-4">
-            {{ form.email(class="form-control") }}
-        </div>
+    <div class="col-12" my-auto>
+        <form method="POST">
+            {{ form.hidden_tag() }}
+            <div class="form-group row">
+                {{ form.email.label(class="col-sm-2 col-form-label") }} 
+                <div class="col-sm-4">
+                    {{ form.email(class="form-control") }}
+                </div>
+            </div>
+            <div class="form-group row">
+                {{ form.password.label(class="col-sm-2 col-form-label") }} 
+                <div class="col-sm-4">
+                    {{ form.password(class="form-control") }}
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-sm-2">
+                    {{ form.submit(class="btn btn-dark") }}
+                </div>
+            </div>
+        </form>
     </div>
-    <div class="form-group row">
-        {{ form.password.label(class="col-sm-2 col-form-label") }} 
-        <div class="col-sm-4">
-            {{ form.password(class="form-control") }}
-        </div>
+    <div class="col-12">
+        <a href="{{ url_for('standaard.register') }}" class="btn btn-dark">Registeren</a>
     </div>
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form.submit(class="btn btn-dark") }}
-        </div>
-    </div>
-</form>
-</div>
-<div class="col-12">
-    <a href="{{ url_for('standaard.register') }}" class="btn btn-dark">Registeren</a>
 </div>
 
 {% endblock %}
+
