--- a/project/templates/cursus.html
+++ b/project/templates/cursus.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="container-fluid">
+<div class="jumbotron">
     <h1 class = "blueheader">Cursussen</h1>
 
     <table class="table">
