--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid"></div>
+<div class="jumbotron">
 
     <h1 class = "blueheader"> Login </h1>
 
