--- a/project/gebruikers/admin/templates/admin/rooster.html
+++ b/project/gebruikers/admin/templates/admin/rooster.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block header %}
+  <h1>{% block title %}Rooster{% endblock %}</h1>
+{% endblock %}
+
 {% block content %}
 
     <h1> Rooster </h1>
