--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -5,8 +5,42 @@
 {% endblock %}
 
 {% block content %}
-<div class="jumbotron">
-    <h1 class = "blueheader">Welkom bij IT Academy Noord-Nederland!</h1>
-    <p>Om te beginnen, selecteer een item uit de navigatiebalk.</p>
+
+<div class ="container">
+  <div class="row">
+    <div class="col-8">
+      <div class="jumbotron">
+        <h1 class = "blueheader">Welkom bij IT Academy Noord-Nederland!</h1>
+        <p>Om te beginnen, selecteer een item uit de navigatiebalk.</p>
+      </div>
+      <div class="jumbotron">
+        <h1 class = "blueheader">Cursussen</h1>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="..." alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="..." alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="..." alt="Third slide">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="col">
+      <div class="container-fluid">
+        <a href="{{ url_for('standaard.login') }}"><h1 class = "whitetext">Login</h1></a>
+      </div>
+      <div class="container-fluid">
+        <a href="{{ url_for('standaard.register') }}"><h1 class = "whitetext">Registreren</h1></a>
+      </div>
+    </div>
+  </div>
+
+
 </div>
 {% endblock %}
