--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -12,6 +12,7 @@
     <div class="col-12" my-auto>
         <form method="POST">
             {{ form.hidden_tag() }}
+            {{ form.referrer }}
             <div class="form-group row">
                 {{ form.email.label(class="col-sm-2 col-form-label") }} 
                 <div class="col-sm-4">
