--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -27,19 +27,16 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="navbar-nav ml-auto d-lg-flex align-items-center">
+        <div class="navbar-nav ml-auto d-lg-flex align-items-md-center">
             <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
             <a class="nav-item nav-link" href="{{ url_for('standaard.cursussen') }}">Cursussen</a>
-            {% if current_user.is_authenticated %}                          
-            <a class="nav-item nav-link" href="{{ url_for('student.rooster') }}">Rooster</a>
-            {% endif %}
             {% if current_user.is_authenticated %}
             <div class="dropdown nav-item nav-link">
                 <button class="btn btn-outline-info" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="far fa-user"></i> {{ current_user.username }}
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Inschrijvingen</a>
+                    <a class="dropdown-item" href="{{ url_for('student.inschrijvingen', username=current_user.username) }}">Inschrijvingen</a>
                     <a class="dropdown-item" href="#">Instellingen</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('standaard.logout') }}">Uitloggen</a>
