--- a/project/templates/cursussen.html
+++ b/project/templates/cursussen.html
@@ -6,35 +6,32 @@
 
 {% block content %}
 
-<div class="jumbotron">
+<div class="jumbotron m-0">
     <h1 class="blueheader">Cursussen</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Taal</th>
-                <th scope="col">Docent</th>
-                <th scope="col">Datum</th>
-                <th scope="col">Locatie</th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for lecture in lectures %}
-            <tr>
-                <td>{{ lecture.language }}</td>
-                <td>{{ lecture.username }}</td>
-                <td>{{ lecture.start_time }}</td>
-                <td>{{ lecture.location }}</td>
-                {% if current_user.is_authenticated %}
-                    <td><a href="{{ url_for('standaard.cursus', language=lecture.language, lecture_id=lecture.id)}}" class="btn btn-dark">Aanmelden</a></td> <!---moet nog een dynamische link aanmaken--->
-                {% else %}
-                    <td></td>
-                {% endif %}
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <div class="col col-sm-12 p-0">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Taal</th>
+                    <th scope="col">Docent</th>
+                    <th scope="col">Datum</th>
+                    <th scope="col">Locatie</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for lecture in lectures %}
+                <tr>
+                    <td>{{ lecture.language }}</td>
+                    <td>{{ lecture.username }}</td>
+                    <td>{{ lecture.start_time }}</td>
+                    <td>{{ lecture.location }}</td>
+                    <td><a href="{{ url_for('standaard.cursus', language=lecture.language, lecture_id=lecture.id)}}" class="btn btn-dark">Bekijken</a></td> <!---moet nog een dynamische link aanmaken--->
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock %}
 
