--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -27,29 +27,35 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="navbar-nav ml-auto d-lg-flex align-items-md-center">
+        <div class="navbar-nav ml-auto d-lg-flex align-items-lg-center">
             <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
             <a class="nav-item nav-link" href="{{ url_for('standaard.cursussen') }}">Cursussen</a>
             {% if current_user.is_authenticated %}
             <div class="dropdown nav-item nav-link">
                 <button class="btn btn-outline-info" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="far fa-user"></i> {{ current_user.username }}
+                    <i class="fas fa-user"></i> {{ current_user.username }}
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="{{ url_for('student.inschrijvingen', username=current_user.username) }}">Inschrijvingen</a>
-                    <a class="dropdown-item" href="#">Instellingen</a>
+                    <a class="dropdown-item" href="{{ url_for('student.inschrijvingen', username=current_user.username) }}"><i class="fas fa-graduation-cap"></i> Inschrijvingen</a>
+                    <a class="dropdown-item" href="{{ url_for('student.instellingen') }}"><i class="fas fa-user-edit"></i> Instellingen</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{{ url_for('standaard.logout') }}">Uitloggen</a>
+                    <a class="dropdown-item" href="{{ url_for('standaard.logout') }}"><i class="fas fa-power-off"></i> Uitloggen</a>
                 </div>
             </div>                          
             {% else %}
-            <a class="nav-item nav-link" href="{{ url_for('standaard.login') }}">Inloggen</a>
-            <a class="nav-item nav-link" href="{{ url_for('standaard.register') }}">Registreren</a>
+            <div class="nav-item nav-link">
+                <a class="btn btn-outline-info" href="{{ url_for('standaard.login') }}"><i class="fas fa-sign-in-alt"></i> Inloggen</a>
+            </div>
+            <div class="nav-item nav-link">
+                <a class="btn btn-outline-info" href="{{ url_for('standaard.register') }}"><i class="fas fa-pen"></i> Registreren</a>
+            </div>
             {% endif %}
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>            
-            </form>
+            <div class="nav-item nav-link">
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>            
+                </form>
+            </div>
         </div>
     </div>
 </nav>
