--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -9,10 +9,9 @@
 
     <h1 class = "blueheader"> Login </h1>
 
-    <div class="col-12" my-auto>
+    <div class="col-lg-12" my-auto>
         <form method="POST">
             {{ form.hidden_tag() }}
-            {{ form.referrer }}
             <div class="form-group row">
                 {{ form.email.label(class="col-sm-2 col-form-label") }} 
                 <div class="col-sm-4">
