--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -35,7 +35,7 @@
                 <button class="btn btn-outline-info" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-user"></i> {{ current_user.username }}
                 </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="{{ url_for('student.inschrijvingen', username=current_user.username) }}"><i class="fas fa-graduation-cap"></i> Inschrijvingen</a>
                     <a class="dropdown-item" href="{{ url_for('student.instellingen') }}"><i class="fas fa-user-edit"></i> Instellingen</a>
                     <div class="dropdown-divider"></div>
