--- a/project/templates/cursus.html
+++ b/project/templates/cursus.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 <div class="jumbotron m-0">
-    <h1><i class="fas fa-book"></i> Cursus {{ lecture.language }}</h1>
+    <h1><i class="fas fa-book"></i> Cursus {{ course.language }}</h1>
 </div>
 
 <div class="col-sm-12">
 
 
 {% if current_user.is_authenticated %}
-<a href="{{ url_for('student.inschrijven', language_id=lecture.language_id, lecture_id=lecture.id)}}" class="btn btn-dark">Inschrijven</a>
+<a href="{{ url_for('student.inschrijven', language_id=course.language_id, course_id=course.id)}}" class="btn btn-dark">Inschrijven</a>
 {% endif %}
 
 </div>
