--- a/project/gebruikers/student/templates/student/rooster.html
+++ b/project/gebruikers/student/templates/student/rooster.html
@@ -2,7 +2,15 @@
 
 {% block content %}
 
-<div class="jumbotron m-0">
+<div class="jumbotron m-0 p-4">
+    <div class="row p-3">
+        <div class="col d-flex justify-content-end p-1">
+            <a class="btn btn-outline-success" href="{{ url_for('student.rooster', year=previous[0], week=previous[1]) }}">Vorige week</a>
+        </div>
+        <div class="col d-flex justify-content-start p-1">
+            <a class="btn btn-outline-success" href="{{ url_for('student.rooster', year=next[0], week=next[1]) }}">Volgende week</a>
+        </div>
+    </div>
     <table class="table">
         <thead>
             <tr>
