--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -37,6 +37,7 @@
                 </button>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="{{ url_for('student.inschrijvingen', username=current_user.username) }}"><i class="fas fa-graduation-cap"></i> Inschrijvingen</a>
+                    <a class="dropdown-item" href="{{ url_for('student.rooster', year=date_now.year, week=date_now.isocalendar()[1]) }}"><i class="fas fa-calendar-alt"></i> Rooster</a>
                     <a class="dropdown-item" href="{{ url_for('student.instellingen') }}"><i class="fas fa-user-edit"></i> Instellingen</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('standaard.logout') }}"><i class="fas fa-power-off"></i> Uitloggen</a>
