--- a/project/gebruikers/admin/templates/admin/addcourse.html
+++ b/project/gebruikers/admin/templates/admin/addcourse.html
@@ -4,7 +4,7 @@
 {% block body %}
 <div class="jumbotron">
 
-    <h1 class = "blueheader"> Add Role </h1>
+    <h3> Add Course </h3>
 
     <div class="col-lg-12" my-auto>
         <form method="POST">
@@ -16,9 +16,15 @@
                 </div>
             </div>
             <div class="form-group row">
-                {{ form.rolename.label(class="col-sm-2 col-form-label") }} 
+                {{ form.language.label(class="col-sm-2 col-form-label") }} 
                 <div class="col-sm-4">
-                    {{ form.rolename(class="form-control") }}
+                    {{ form.language(class="form-control") }}
+                </div>
+            </div>
+            <div class="form-group row">
+                {{ form.location.label(class="col-sm-2 col-form-label") }} 
+                <div class="col-sm-4">
+                    {{ form.location(class="form-control") }}
                 </div>
             </div>
             <div class="form-group row">
