--- a/project/gebruikers/admin/templates/admin/addcourse.html
+++ b/project/gebruikers/admin/templates/admin/addcourse.html
@@ -2,37 +2,34 @@
 
 
 {% block body %}
-<div class="jumbotron">
 
-    <h3> Add Course </h3>
-
-    <div class="col-lg-12" my-auto>
-        <form method="POST">
-            {{ form.hidden_tag() }}
-            <div class="form-group row">
-                {{ form.username.label(class="col-sm-2 col-form-label") }} 
-                <div class="col-sm-4">
-                    {{ form.username(class="form-control") }}
-                </div>
+<p><h3> Add Course </h3> </p>
+<p>
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        <div>
+            {{ form.username.label(class="col-sm-2 col-form-label") }} 
+            <div>
+                {{ form.username(class="form-control") }}
             </div>
-            <div class="form-group row">
-                {{ form.language.label(class="col-sm-2 col-form-label") }} 
-                <div class="col-sm-4">
-                    {{ form.language(class="form-control") }}
-                </div>
+        </div>
+        <div>
+            {{ form.language.label}} 
+            <div>
+                {{ form.language }}
             </div>
-            <div class="form-group row">
-                {{ form.location.label(class="col-sm-2 col-form-label") }} 
-                <div class="col-sm-4">
-                    {{ form.location(class="form-control") }}
-                </div>
+        </div>
+        <div>
+            {{ form.location.label }} 
+            <div>
+                {{ form.location }}
             </div>
-            <div class="form-group row">
-                <div class="col-sm-2">
-                    {{ form.submit(class="btn btn-dark") }}
-                </div>
+        </div>
+        <div>
+            <div>
+                {{ form.submit(class="btn btn-dark") }}
             </div>
-        </form>
-    </div>
-</div>
+        </div>
+    </form>
+</p>
 {% endblock %}
