--- a/project/gebruikers/admin/templates/admin/addcourse.html
+++ b/project/gebruikers/admin/templates/admin/addcourse.html
@@ -8,9 +8,9 @@
     <form method="POST">
         {{ form.hidden_tag() }}
         <div>
-            {{ form.username.label(class="col-sm-2 col-form-label") }} 
+            {{ form.username.label }} 
             <div>
-                {{ form.username(class="form-control") }}
+                {{ form.username }}
             </div>
         </div>
         <div>
