--- a/project/gebruikers/admin/templates/admin/addlecture.html
+++ b/project/gebruikers/admin/templates/admin/addlecture.html
@@ -1,44 +1,40 @@
 {% extends 'admin/master.html' %}
 
-
 {% block body %}
-<div class="model_list_table">
 
-    <h1> Add Lecture </h1>
-
-    <div class="col-lg-12" my-auto>
-        <form method="POST">
-            {{ form.hidden_tag() }}
-            <div class="form-group row">
-                {{ form.course_name.label(class="col-sm-2 col-form-label") }} 
-                <div class="col-sm-4">
-                    {{ form.course_name(class="form-control") }}
-                </div>
+<p><h3> Add Lecture </h3> </p>
+<p>
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        <div>
+            {{ form.course_id.label }} 
+            <div>
+                {{ form.course_id }}
             </div>
-            <div class="form-group row">
-                {{ form.start_time.label(class="col-sm-2 col-form-label") }} 
-                <div class="col-sm-4">
-                    {{ form.start_time(class="form-control") }}
-                </div>
+        </div>
+        <div>
+            {{ form.start_time.label }} 
+            <div>
+                {{ form.start_time }}
             </div>
-            <div class="form-group row">
-                {{ form.end_time.label(class="col-sm-2 col-form-label") }} 
-                <div class="col-sm-4">
-                    {{ form.end_time(class="form-control") }}
-                </div>
+        </div>
+        <div>
+            {{ form.end_time.label }} 
+            <div>
+                {{ form.end_time }}
             </div>
-            <div class="form-group row">
-                {{ form.lecture_name.label(class="col-sm-2 col-form-label") }} 
-                <div class="col-sm-4">
-                    {{ form.lecture_name(class="form-control") }}
-                </div>
+        </div>
+        <div>
+            {{ form.lecture_name.label }} 
+            <div>
+                {{ form.lecture_name }}
             </div>
-            <div class="form-group row">
-                <div class="col-sm-2">
-                    {{ form.submit(class="btn btn-dark") }}
-                </div>
+        </div>
+        <div>
+            <div>
+                {{ form.submit(class="btn btn-dark") }}
             </div>
-        </form>
-    </div>
-</div>
+        </div>
+    </form>
+</p>
 {% endblock %}
