--- a/project/gebruikers/admin/templates/admin/addcourse.html
+++ b/project/gebruikers/admin/templates/admin/addcourse.html
@@ -26,6 +26,18 @@
             </div>
         </div>
         <div>
+            {{ form.cost.label }} 
+            <div>
+                {{ form.cost }}
+            </div>
+        </div>
+        <div>
+            {{ form.description.label }} 
+            <div>
+                {{ form.description }}
+            </div>
+        </div>
+        <div>
             <div>
                 {{ form.submit(class="btn btn-dark") }}
             </div>
