--- a/project/templates/cursus.html
+++ b/project/templates/cursus.html
@@ -4,9 +4,16 @@
 <div class="jumbotron m-0">
     <h1><i class="fas fa-book"></i> Cursus {{ course.language }}</h1>
 </div>
+<div class="jumbotron">
+    <p> <b>Prijs:</b> {{ course.cost}} </p>
+    <p> <b>Docent:</b> {{ course.username}} </p>
+    <p> <b>Locatie:</b> {{ course.location}} </p>
+    <p> <b>Omschrijving:</b> {{ course.description }} </p>
+</div>
+
+
 
 <div class="col-sm-12">
-
 
 {% if current_user.is_authenticated %}
 <a href="{{ url_for('student.inschrijven', language_id=course.language_id, course_id=course.id)}}" class="btn btn-dark">Inschrijven</a>
