--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -16,16 +16,24 @@
       <div class="jumbotron">
         <h1 class = "blueheader">Cursussen</h1>
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="..." alt="First slide">
+              <img class="d-block w-100" src="/static/blauw.png" alt="cursussen"> <!--source afbeeling nog veranderen-->
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Onze Cursussen</h5>
+                <p>all onze cursussen</p>
+              </div>
             </div>
+            {% for cursus in cursussen %}
             <div class="carousel-item">
-              <img class="d-block w-100" src="..." alt="Second slide">
+              <img class="d-block w-100" src="/static/blauw.png" alt={{cursus.language}}> <!-- source afbeeling nog veranderen -->
+              <div class="carousel-caption d-none d-md-block">
+                <h5>{{cursus.language}}</h5>
+                <p>{{cursus.description}}</p>
+              </div>
             </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="..." alt="Third slide">
-            </div>
+            {% endfor %}
           </div>
         </div>
       </div>
