--- a/project/gebruikers/admin/templates/admin/admin_rooster.html
+++ b/project/gebruikers/admin/templates/admin/admin_rooster.html
@@ -4,14 +4,17 @@
 
 <div class="jumbotron m-0 p-4">
     <div class="row d-flex justify-content-center">
-        <h1>Week {{ dates[0].isocalendar()[1] }}</h1>
+        <h1>Week {{ dates[0].isocalendar()[1] }} </h1> 
+    </div>
+    <div class="row d-flex justify-content-center">
+        <a class="btn btn-outline-info" target="_blank" href="{{ url_for('admin.index') }}">Admin Panel</a>
     </div>
     <div class="row p-3">
         <div class="col d-flex justify-content-end p-1">
-            <a class="btn btn-outline-success" href="{{ url_for('student.rooster', year=previous[0], week=previous[1]) }}">Vorige week</a>
+            <a class="btn btn-outline-success" href="{{ url_for('administrator.admin_rooster', year=previous[0], week=previous[1]) }}">Vorige week</a>
         </div>
         <div class="col d-flex justify-content-start p-1">
-            <a class="btn btn-outline-success" href="{{ url_for('student.rooster', year=next[0], week=next[1]) }}">Volgende week</a>
+            <a class="btn btn-outline-success" href="{{ url_for('administrator.admin_rooster', year=next[0], week=next[1]) }}">Volgende week</a>
         </div>
     </div>
     <table class="table rooster">
