--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='stylesheet.css') }}?rnd=23">    
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='stylesheet.css') }}?rnd=24">    
 
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"     integrity="sha384-  Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"   crossorigin="anonymous">
@@ -37,7 +37,13 @@
                 </button>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="{{ url_for('student.inschrijvingen', username=current_user.username) }}"><i class="fas fa-graduation-cap"></i> Inschrijvingen</a>
+                    {% if current_user.role_id == 1 %}
                     <a class="dropdown-item" href="{{ url_for('student.rooster', year=date_now.year, week=date_now.isocalendar()[1]) }}"><i class="fas fa-calendar-alt"></i> Rooster</a>
+                    {% elif current_user.role_id == 2 %}
+                    <a class="dropdown-item" href="{{ url_for('docent.docent_rooster', year=date_now.year, week=date_now.isocalendar()[1]) }}"><i class="fas fa-calendar-alt"></i> Rooster</a>
+                    {% elif current_user.role_id == 3 %}
+                    <a class="dropdown-item" href="{{ url_for('administrator.admin_rooster', year=date_now.year, week=date_now.isocalendar()[1]) }}"><i class="fas fa-calendar-alt"></i> Rooster</a>
+                    {% endif %}
                     <a class="dropdown-item" href="{{ url_for('student.instellingen') }}"><i class="fas fa-user-edit"></i> Instellingen</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('standaard.logout') }}"><i class="fas fa-power-off"></i> Uitloggen</a>
