admin panel new window

--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -48,7 +48,7 @@
       </div>
       {% if role == "admin" %}
       <div class="container-fluid">
-        <a href="{{ url_for('admin.index') }}"><h1 class = "whitetext">Admin Panel</h1></a>
+        <a href="{{ url_for('admin.index') }}" target="_blank"><h1 class = "whitetext">Admin Panel</h1></a>
       </div>
       {% endif %}    
     {% else %}
